\name{NEWS}
\title{News for Package "prettydoc"}

\section{Changes in "prettydoc" version 0.1.x}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Added the \code{leonids} and \code{hpstr} themes.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed the alignment of Table of Contents (#3).
      \item Fixed the incorrect link to CSS file when \code{self_contained} is
            \code{false} (#4).
    }
  }
}

\section{Changes in "prettydoc" version 0.1.0}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item Initial release.
      \item Includes themes \code{cayman}, \code{tactile} and \code{architect}.
      \item Includes syntax highlight styles \code{github} and \code{vignette}.
    }
  }
}