@@ -5,7 +5,8 @@
 \title{Creating Pretty HTML from R Markdown}
 \usage{
 html_pretty(theme = "cayman", highlight = NULL, css = NULL,
-  fig_retina = NULL, keep_md = FALSE, readme = FALSE, ...)
+  fig_retina = NULL, keep_md = FALSE, readme = FALSE,
+  compressed_css = TRUE, ...)
 }
 \arguments{
 \item{theme}{Character string to specify the document theme. Currently supported
@@ -28,6 +29,8 @@ This is the same argument in \code{\link[rmarkdown]{html_vignette}}.}
 
 \item{readme}{Use this vignette as the package \file{README.md} file.
 This is the same argument in \code{\link[rmarkdown]{html_vignette}}.}
+
+\item{compressed_css}{Whether the compressed CSS should be used.}
 
 \item{\dots}{Additional arguments passed to \code{\link[rmarkdown]{html_document}}.}
 }
